src/test/ui/error-codes/E0426.stderr
error[E0426]: use of undeclared label `'a`
  --> $DIR/E0426.rs:3:15
   |
LL |         break 'a;
   |               ^^ undeclared label `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
